# cleanfolder

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
cleanfolder/: __init__.py  actions.py  analyzer.py  categorizer.py  cli.py  duplicates.py  reporter.py  scanner.py  utils.py
cleanfolder/llm/: anthropic_llm.py  base.py  ollama_llm.py  openai_llm.py  router.py  vllm_llm.py
tests/: test_duplicates.py  test_scanner.py
